config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordproc-web
  namespace: <PROJECT>
  labels:
    app: <PROJECT>-web
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: <PROJECT>-web
